# ifm

./: .hgignore  ANNOUNCE  Makefile.am  Makefile.dist  Makefile.in  NEWS  README  README.maps  README.unix  README.vars  README.win32  THANKS  TO-DO  acconfig.h  aclocal.m4  autogen.sh  configure  configure.ac  configure.in
bugs/: project.yaml
contrib/: README  asciimapper  ifm-hilite.el  ifm-mode.el  ifm.py  ifm.vim  ifmpp  rec2scr.pl
demos/: Makefile.am  Makefile.in  maptest.ifm
doc/: Makefile.am  Makefile.in  changes.rst  conf.py.in  cover.ifm  cover.ifm.in  diagnostics.rst  editors.rst  example.ifm  example.rst  gfdl.lyx  ifm-bot.pod  ifm-desc.pod  ifm-diag.pod  ifm-lang.pod  ifm-map.pod  ifm-oper.pod  ifm-out.pod  ifm-task.pod  ifm-top.pod  ifm.html  ifm.info  ifm.key  ifm.lyx  ifm.man  ifm.pod  ifm.txt  ifm2dev.rst  ifm2tex.rst  ifm2web.rst  index.rst  install.rst  intro.rst  language.rst  license.rst  links.rst  logo.ifm  macros.tex  map.dia  maps.rst  (+10 more)
doc/Mail/: dave1.txt  dave2.txt  dave3.txt  dave4.txt  dave6.txt  reply1.txt  reply2.txt  russ.txt
doc/examples/: Makefile  example.ifm  ruins.ifm
doc/images/: Makefile
doc/static/: ifm.css
doc/templates/: indexcontent.html  indexsidebar.html  layout.html
etc/: Makefile.add  Makefile.common  Makefile.dist  add-header  ccoption.m4  checkout  config.h.in  cppcheck.supp  header.c  header.h  header.ifm  header.inc  header.l  header.pl  header.ps  header.tcl  header.y  library.m4  version.m4
fig/: Makefile.am  Makefile.in  fig-attr.c  fig-attr.h  fig-file.c  fig-file.h  fig-object.c  fig-object.h  fig-util.c  fig-util.h  fig.h  testfig.c
gpp/: Makefile.am  Makefile.in  gpp.c
lib/: Makefile.am  Makefile.in  helvetica.ifm  ifm-alias.ifm  ifm-color.ifm  ifm-compat.ifm  ifm-init.ifm  ifm-pro.ps  noshadow.ifm  puzzle.ifm  reckless.ifm  special.ifm  verbose.ifm
man/: Makefile.am  Makefile.in
progs/: Makefile.am  Makefile.in  ifm2dev.pl  ifm2tex.pl  ifm2web.pl  scr2ifm.html  scr2ifm.info  scr2ifm.pl  scr2ifm.pod  scr2ifm.txt  tkifm.html  tkifm.info  tkifm.pod  tkifm.tcl  tkifm.txt
progs/ctext/: ctext.tcl
progs/tests/: Makefile  advent.scr  ballyhoo.cmd  ballyhoo1.scr  ballyhoo2.scr  ballyhoo3.scr  curses.scr  dungeon.scr  pawn.cmd  pawn1.scr  pawn2.scr  trinity.cmd  trinity.scr  windhall.cmd  windhall1.scr  windhall2.scr  zork1.cmd  zork1.scr
src/: Makefile.am  Makefile.in  ifm-dot.c  ifm-dot.h  ifm-driver.c  ifm-driver.h  ifm-fig.c  ifm-fig.h  ifm-format.c  ifm-format.h  ifm-gpp.c  ifm-gpp.h  ifm-main.c  ifm-main.h  ifm-map.c  ifm-map.h  ifm-parse.c  ifm-parse.h  ifm-parse.y  ifm-path.c  ifm-path.h  ifm-ps.c  ifm-ps.h  ifm-raw.c  ifm-raw.h  ifm-rec.c  ifm-rec.h  ifm-scan.c  ifm-scan.l  ifm-svg.c  ifm-svg.h  ifm-task.c  ifm-task.h  ifm-text.c  ifm-text.h  ifm-tk.c  ifm-tk.h  ifm-util.c  ifm-util.h  ifm-vars.c  (+4 more)
src/libfig/: Makefile.am  Makefile.in  fig-attr.c  fig-attr.h  fig-file.c  fig-file.h  fig-object.c  fig-object.h  fig-util.c  fig-util.h  testfig.c
src/libsvg/: Makefile.am  svg-attr.c  svg-attr.h  svg-file.c  svg-file.h  svg-object.c  svg-object.h  svg-util.c  svg-util.h  svg.h  testsvg.c
src/libvars/: Makefile.am  Makefile.in  vars-array.h  vars-buffer.c  vars-buffer.h  vars-compat.h  vars-config.h  vars-copy.c  vars-copy.h  vars-debug.c  vars-debug.h  vars-destroy.c  vars-destroy.h  vars-freeze-lex.l  vars-freeze.c  vars-func.c  vars-getopt.c  vars-getopt.h  vars-graph.c  vars-hash.c  vars-image.h  vars-iterate.h  vars-list.c  vars-macros.h  vars-memory.c  vars-memory.h  vars-parser-lex.h  vars-parser-lex.l  vars-parser-yacc.h  vars-parser-yacc.y  vars-print.c  vars-queue.c  vars-random.c  vars-regex.c  vars-scalar.c  vars-scalar.h  vars-system.c  vars-system.h  vars-traverse.c  vars-traverse.h  (+12 more)
tests/: .gdbinit  Makefile.am  Makefile.in  Maketests  README  map-exit.exp  map-exit.test  map-join1.exp  map-join1.test  map-join2.exp  map-join2.test  map-link1.exp  map-link1.test  map-link2.test  map-nolink.exp  map-nolink.test  task-attr1.exp  task-attr1.list  task-attr1.test  task-attr2.exp  task-attr2.list  task-attr2.test  task-attr3.exp  task-attr3.list  task-attr3.test  task-before1.exp  task-before1.list  task-before1.test  task-before2.exp  task-before2.list  task-before2.test  task-cmd.exp  task-cmd.list  task-cmd.test  task-do1.exp  task-do1.list  task-do1.test  task-do2.exp  task-do2.ifm  task-do2.list  (+143 more)
vars/: Makefile.am  Makefile.in  vars-array.c  vars-compat.c  vars-config.c  vars-config.h  vars-database.c  vars-database.h  vars-freeze-lex.c  vars-freeze-lex.h  vars-freeze-lex.l  vars-freeze.h  vars-func.h  vars-getopt.h  vars-graph.c  vars-graph.h  vars-hash.h  vars-image.c  vars-iterate.c  vars-list.c  vars-list.h  vars-matrix.c  vars-matrix.h  vars-memory.c  vars-parser-lex.c  vars-parser-yacc.c  vars-parser.c  vars-parser.h  vars-print.c  vars-print.h  vars-queue.c  vars-queue.h  vars-random.c  vars-random.h  vars-regex.h  vars-scalar.c  vars-scalar.h  vars-type.h  vars-utils.c  vars-vector.h  (+3 more)
win32/: Makefile  Makefile.am  README  README.build  README.win32
