## Automake template for IFM library files.

STYLES = helvetica.ifm puzzle.ifm reckless.ifm special.ifm verbose.ifm

LIBFILES = ifm-color.ifm ifm-compat.ifm ifm-init.ifm ifm-pro.ps ifm-rgb.txt \
$(STYLES)

pkgdata_DATA = $(LIBFILES)

EXTRA_DIST = $(LIBFILES)

include $(top_srcdir)/etc/Makefile.common
